syntax = "proto3";

option csharp_namespace = "Sample4.Model";

import "google/protobuf/timestamp.proto";

package Greet;

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply);
  rpc ToUpper (UpperRequest) returns (UpperReply);
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings.
message HelloReply {
  string message = 1;
}

message UpperRequest {
  string input = 1;
}

message UpperReply {
  string YouAre = 1;
  google.protobuf.Timestamp TimeIs = 2;
  string result = 3;

}